--- a/Atv_1_POO/README
+++ b/Atv_1_POO/README
@@ -1,2 +1,1 @@
-A proposta desse exercicio é de criar classes separadas para um unico componente. 
-Sabendo que os perifericos do computador são filhos do mesmo, então, temos o conceito de herança.
+A proposta desse exercicio é de criar uma classe para a criação de Empregados, tendo assim a divisão e organização do código.
